@@ -2,7 +2,10 @@ package com.rookies3.myspringbootlab.service;
 
 import com.rookies3.myspringbootlab.controller.dto.BookDTO;
 import com.rookies3.myspringbootlab.entity.Book;
+import com.rookies3.myspringbootlab.entity.BookDetail;
 import com.rookies3.myspringbootlab.exception.BusinessException;
+import com.rookies3.myspringbootlab.exception.ErrorCode;
+import com.rookies3.myspringbootlab.repository.BookDetailRepository;
 import com.rookies3.myspringbootlab.repository.BookRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -17,86 +20,128 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class BookService {
-    
+
     private final BookRepository bookRepository;
-    
-    public List<BookDTO.BookResponse> getAllBooks() {
-        return bookRepository.findAll().stream()
-                //.map(book -> BookDTO.BookResponse.from(book))
-                .map(BookDTO.BookResponse::from)
-                .toList();  //Stream<BookResponse> => List<BookResponse>
+    private final BookDetailRepository bookDetailRepository;
+
+    public List<BookDTO.Response> getAllBooks() {
+        return bookRepository.findAll()
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
     }
-    
-    public BookDTO.BookResponse getBookById(Long id) {
-        Book book = findBookById(id);
-        return BookDTO.BookResponse.from(book);
+
+    public BookDTO.Response getBookById(Long id) {
+        Book book = bookRepository.findByIdWithBookDetail(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
+        return BookDTO.Response.fromEntity(book);
     }
-    
-    public BookDTO.BookResponse getBookByIsbn(String isbn) {
-        Book book = bookRepository.findByIsbn(isbn)
-                .orElseThrow(() -> new BusinessException("Book Not Found with ISBN: "
-                        + isbn, HttpStatus.NOT_FOUND));
-        return BookDTO.BookResponse.from(book);
+
+    public BookDTO.Response getBookByIsbn(String isbn) {
+        Book book = bookRepository.findByIsbnWithBookDetail(isbn)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
+        return BookDTO.Response.fromEntity(book);
     }
-    
-    public List<BookDTO.BookResponse> getBooksByAuthor(String author) {
-        return bookRepository.findByAuthor(author).stream()
-                .map(BookDTO.BookResponse::from)
-                .toList();
+
+    public List<BookDTO.Response> getBooksByAuthor(String author) {
+        return bookRepository.findByAuthorContainingIgnoreCase(author)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
     }
-    
+
+    public List<BookDTO.Response> getBooksByTitle(String title) {
+        return bookRepository.findByTitleContainingIgnoreCase(title)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .collect(Collectors.toList());
+    }
+
     @Transactional
-    public BookDTO.BookResponse createBook(BookDTO.BookCreateRequest request) {
-        // ISBN 중복 검사
-        bookRepository.findByIsbn(request.getIsbn()) //Optional<Book>
-                .ifPresent(book -> {
-                    throw new BusinessException("Book with this ISBN already exists", HttpStatus.CONFLICT);
-                });
-        // BookCreateRequest => Entity 변환
-        Book book = request.toEntity();
-        // 등록 처리
+    public BookDTO.Response createBook(BookDTO.Request request) {
+        // Validate ISBN is not already in use
+        if (bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
+        }
+
+        // Create book entity
+        Book book = Book.builder()
+                .title(request.getTitle())
+                .author(request.getAuthor())
+                .isbn(request.getIsbn())
+                .price(request.getPrice())
+                .publishDate(request.getPublishDate())
+                .build();
+
+        // Create book detail if provided
+        if (request.getDetailRequest() != null) {
+            BookDetail bookDetail = BookDetail.builder()
+                    .description(request.getDetailRequest().getDescription())
+                    .language(request.getDetailRequest().getLanguage())
+                    .pageCount(request.getDetailRequest().getPageCount())
+                    .publisher(request.getDetailRequest().getPublisher())
+                    .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
+                    .edition(request.getDetailRequest().getEdition())
+                    .book(book)
+                    .build();
+
+            book.setBookDetail(bookDetail);
+        }
+
+        // Save and return the book
         Book savedBook = bookRepository.save(book);
-        // Book => BookResponse 변환
-        return BookDTO.BookResponse.from(savedBook);
+        return BookDTO.Response.fromEntity(savedBook);
     }
-    
+
     @Transactional
-    public BookDTO.BookResponse updateBook(Long id, BookDTO.BookUpdateRequest request) {
-        Book existingBook = findBookById(id);
-        
-        // 변경이 필요한 필드만 업데이트
-        if (request.getPrice() != null) {
-            existingBook.setPrice(request.getPrice());
+    public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
+        // Find the book
+        Book book = bookRepository.findById(id)
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
+
+        // Check if another book already has the ISBN
+        if (!book.getIsbn().equals(request.getIsbn()) &&
+                bookRepository.existsByIsbn(request.getIsbn())) {
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
-        
-        // 확장성을 위한 추가 필드 업데이트
-        if (request.getTitle() != null) {
-            existingBook.setTitle(request.getTitle());
+
+        // Update book basic info
+        book.setTitle(request.getTitle());
+        book.setAuthor(request.getAuthor());
+        book.setIsbn(request.getIsbn());
+        book.setPrice(request.getPrice());
+        book.setPublishDate(request.getPublishDate());
+
+        // Update book detail if provided
+        if (request.getDetailRequest() != null) {
+            BookDetail bookDetail = book.getBookDetail();
+
+            // Create new detail if not exists
+            if (bookDetail == null) {
+                bookDetail = new BookDetail();
+                bookDetail.setBook(book);
+                book.setBookDetail(bookDetail);
+            }
+
+            // Update detail fields
+            bookDetail.setDescription(request.getDetailRequest().getDescription());
+            bookDetail.setLanguage(request.getDetailRequest().getLanguage());
+            bookDetail.setPageCount(request.getDetailRequest().getPageCount());
+            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
+            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
+            bookDetail.setEdition(request.getDetailRequest().getEdition());
         }
-        
-        if (request.getAuthor() != null) {
-            existingBook.setAuthor(request.getAuthor());
-        }
-        
-        if (request.getPublishDate() != null) {
-            existingBook.setPublishDate(request.getPublishDate());
-        }
-        
-        Book updatedBook = bookRepository.save(existingBook);
-        return BookDTO.BookResponse.from(updatedBook);
+
+        // Save and return updated book
+        Book updatedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(updatedBook);
     }
-    
+
     @Transactional
     public void deleteBook(Long id) {
         if (!bookRepository.existsById(id)) {
-            throw new BusinessException("Book Not Found with ID: " + id, HttpStatus.NOT_FOUND);
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id);
         }
         bookRepository.deleteById(id);
-    }
-    
-    // 내부 헬퍼 메서드
-    private Book findBookById(Long id) {
-        return bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Book Not Found with ID: " + id, HttpStatus.NOT_FOUND));
     }
 }
